// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/IntlProvider > should render children when passed translation strings 1`] = `
<div>
  <span>
    Build Number:
  </span>
</div>
`;

exports[`components/IntlProvider > should render children when passed translation strings for a non-default locale 1`] = `
<div>
  <span>
    Numéro de build :
  </span>
</div>
`;
